0027922: Samples - Qt sample document window display problem